Bonghu64 - Agregado de SplashScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="menu_home">Inicio</string>
     <string name="menu_gallery">Citas</string>
     <string name="menu_slideshow">Usuarios</string>
+    <string name="title_activity_splash_screen">SplashScreenActivity</string>
 </resources>
