--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="menu_gallery">Citas</string>
     <string name="menu_slideshow">Usuarios</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
+    <string name="action_logout">Cerrar Sesión </string>
 </resources>
